--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   hand_signature: ^3.0.0
   flutter_image_compress: ^2.0.3
   reorderables: ^0.6.0
-  permission_handler: ^11.1.0
+  permission_handler: 
 
 dev_dependencies:
   flutter_test:
